# BSidesBallarat2026

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  pyproject.toml
.github/agents/: bsides-researcher.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  participant.ts
extension/src/tools/: downloadArxivPaper.ts  saveMarkdown.ts  screenshotPdf.ts
presentation/: slides.md  theme.css
servers/mcp-slides/: package-lock.json  package.json  tsconfig.json
servers/mcp-slides/src/: index.ts
servers/mcp-slides/src/ui/: architecture.html
skills/acquire-arxiv-papers/: SKILL.md
skills/acquire-arxiv-papers/scripts/: download-arxiv-paper.ps1
skills/analyse-paper-screenshots/: SKILL.md
skills/analyse-paper-screenshots/scripts/: list-recent-screenshot-dirs.ps1  select-analysis-images.ps1
skills/discover-papers/: SKILL.md
skills/render-pdf-screenshots/: SKILL.md
skills/render-pdf-screenshots/scripts/: list-recent-papers.ps1
